Renames Project folders for more appropriate naems, renames namespace to VendingMachineProject

--- a/VendingMachineTest/Tests.csproj
+++ b/VendingMachineTest/Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VendingMachine\VendingMachine.csproj" />
+    <ProjectReference Include="..\VendingMachine\VendingMachineProject.csproj" />
   </ItemGroup>
 
   <ItemGroup>
